# forge

./: .gitattributes  .gitignore  .gitleaks.toml  .typos.toml  CLAUDE.md  Cargo.toml  README.md  THREAT_MODEL.md  deny.toml  flake.nix  justfile  lefthook.yml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.harness/: feature_list.json  progress.md  restore-env.sh
forge-auditor/: Cargo.toml
forge-auditor/src/: lib.rs
forge-core/: Cargo.toml
forge-core/src/: block.rs  error.rs  examples.rs  execution.rs  id.rs  lib.rs  trust.rs
forge-executor/: Cargo.toml
forge-executor/src/: backend.rs  config.rs  error.rs  firecracker.rs  handle.rs  lib.rs  orchestrator.rs  runner.rs  unix_client.rs
forge-executor/tests/: block_execution.rs  firecracker_lifecycle.rs
forge-gateway/: Cargo.toml
forge-gateway/src/: error.rs  lib.rs  main.rs  pool.rs  routes.rs
forge-nix/: Cargo.toml
forge-nix/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_content_hash.rs  fuzz_gateway_create_body.rs  fuzz_gateway_shell_body.rs  fuzz_hash_computation.rs  fuzz_parse_execution_output.rs
