[workspace]
members = [
    "forge-core",
    "forge-nix",
    "forge-executor",
    "forge-auditor",
    "forge-gateway",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
rust-version = "1.82"

[workspace.dependencies]
# forge crates
forge-core = { path = "forge-core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Async
tokio = { version = "1", features = ["full"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"

# Dev dependencies
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
