[workspace]
members = [
    "forge-core",
    "forge-nix",
    "forge-executor",
    "forge-auditor",
    "forge-gateway",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# forge crates
forge-core = { path = "forge-core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP (Unix socket client for Firecracker API)
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"

# Cryptography
sha2 = "0.10"
base64 = "0.22"

# Testing
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
overflow-checks = true

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Internal workspace — not published to crates.io
cargo_common_metadata = "allow"
# Transitive dependency version conflicts are acceptable
multiple_crate_versions = "allow"
