[package]
name = "forge-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Exclude from workspace — cargo-fuzz manages this crate independently.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
forge-core = { path = "../forge-core" }
forge-gateway = { path = "../forge-gateway" }
serde_json = "1"

[[bin]]
name = "fuzz_gateway_create_body"
path = "fuzz_targets/fuzz_gateway_create_body.rs"
test = false
doc = false

[[bin]]
name = "fuzz_gateway_shell_body"
path = "fuzz_targets/fuzz_gateway_shell_body.rs"
test = false
doc = false

[[bin]]
name = "fuzz_content_hash"
path = "fuzz_targets/fuzz_content_hash.rs"
test = false
doc = false
