[package]
name = "forge-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
forge-executor = { path = "../forge-executor" }
base64 = "0.22"

[[bin]]
name = "fuzz_parse_execution_output"
path = "fuzz_targets/fuzz_parse_execution_output.rs"
test = false
doc = false

[[bin]]
name = "fuzz_hash_computation"
path = "fuzz_targets/fuzz_hash_computation.rs"
test = false
doc = false
